--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install python-coveralls nosexcover
+  - pip install codecov nosexcover
   - pip install -r requirements_tests.txt
   - snips-nlu download-all-languages
 script:
-  - python -m nose --with-doctest --with-xcoverage --cover-package=TEMPLATE_SKILL_PACKAGE
+  - python -m nose --with-doctest --with-xcoverage --cover-package=pytlas-template
+after_success:
+  - codecov
