--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ python:
   - "3.6"
 install:
   - pip install codecov nosexcover
+  - pip uninstall -y pytest
   - pip install -r requirements_tests.txt
-  - snips-nlu download-all-languages
 script:
   - python -m nose --with-doctest --with-xcoverage --cover-package=pytlas-template
-after_success:
   - codecov
